# parallel-sh

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
