[package]
name = "parallel-sh"
version = "0.1.3"
authors = ["thyrc <thyrc@users.noreply.github.com>"]
description = "Execute commands in parallel"
edition = "2018"
readme = "README.md"
license = "MIT"
homepage = "https://crates.io/crates/parallel-sh"
repository = "https://github.com/thyrc/parallel-sh"
keywords = ["cli", "parallel", "concurrency", "shell"]
categories = ["command-line-utilities", "concurrency"]
exclude = [".github"]

[dependencies]
log = "0.4"
num_cpus = "1"
simplelog = "0.10"

[dependencies.chrono]
version = "0.4"
default-features = false

[dependencies.clap]
version = "2"
default-features = false

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true
debug = false
