[package]
name = "parallel-sh"
version = "0.2.0"
authors = ["thyrc <thyrc@users.noreply.github.com>"]
description = "Execute commands in parallel"
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://crates.io/crates/parallel-sh"
repository = "https://github.com/thyrc/parallel-sh"
keywords = ["cli", "parallel", "concurrency", "shell"]
categories = ["command-line-utilities", "concurrency"]
exclude = [".github"]

[dependencies]
lexopt = "0.3.0"
log = "0.4"
num_cpus = "1"
simplelog = "0.12"

[dependencies.time]
version = "0.3"

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true
debug = false
